# rosLabs

./: README.md  git.hello  linux commands
ex00/: README.md
module1/: README.md
module1/ex00/: bipki.bip
module2/: README.md
module2/ex01/: ex01.txt
module2/ex03/eSergeev/: CMakeLists.txt  package.xml
module2/ex03/src/: READ.me
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex07/: rosservice_list.txt
module2/ex08/: rqt_console.csv  three_turtles.launch.py  turtlesim1.params.yaml  turtlesim2.params.yaml  turtlesim3.params.yaml
module2/ex10/: commands.txt
module2/ex10/ttcv/: .CMakeLists.txt.un~  .package.xml.un~  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
module2/ex10/ttcv/src/: .text_to_cmd_vel.cpp.un~  text_to_cmd_vel.cpp  text_to_cmd_vel.cpp~
module3/: README.md
module3/ex02/: turtle_action_client.py  turtle_action_server.py
module3/ex02/turtleaction/: CMakeLists.txt  package.xml
module3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
module3/ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
module3/ex04/: doctor.txt
module3/ex05/move_to_goal/: package.xml  setup.py
module4/ex01/: last_transform.txt  transform.txt
module4/ex02/: rviz.rviz
module4/ex02/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module4/ex02/log/: latest_build
module5/ex01/: robot_display.launch.py  t1.urdf
module5/ex02/: robot_display.launch.py  t1.xacro
module5/ex04/: README.md
module5/ex05/: README.md
(+34 files in other folders)
